--- a/css_layout_task1.html
+++ b/css_layout_task1.html
@@ -27,6 +27,9 @@
 
       .grid {
         /*PLACE CSS CODE HERE */
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 20px;
       }
     </style>
   </head>
