--- a/css_layout_task2.html
+++ b/css_layout_task2.html
@@ -35,6 +35,8 @@
         border: 5px solid rgba(74, 102, 112, 1);
 
         /*add CSS here*/
+        grid-column: 1 / 4;
+        grid-row: 1 / 3;
       }
 
       .item2 {
@@ -42,6 +44,8 @@
         border: 5px solid rgba(214, 162, 173, 1);
 
         /*add CSS here*/
+        grid-column: 2 / 5;
+        grid-row: 2 / 4;
       }
     </style>
   </head>
