--- a/css_layout_task3.html
+++ b/css_layout_task3.html
@@ -32,6 +32,14 @@
       }
 
       /*You will need to select each GRID ITEM and add CSS*/
+
+      .one {
+        grid-column: 1 / 3;
+      }
+
+      .four {
+        grid-column: 2 / 3;
+      }
     </style>
   </head>
 
