--- a/css_layout_task4.html
+++ b/css_layout_task4.html
@@ -59,8 +59,34 @@
       /*You will need to style the GRID and some specific GRID ITEMs*/
       .grid {
         /* CSS GRID */
+        display: grid;
+        grid-template: 1fr 1fr 1fr;
       }
       /*Grid Items ... */
+      .el--1 {
+        grid-column: 1 / 3;
+      }
+      
+      .el--2 {
+        grid-column: 3;
+        justify-self: end;
+        align-self: start;
+      }
+
+      .el--4 {
+        justify-self: center;
+        align-self: center;
+      }
+
+      .el--5 {
+        grid-column: 3;
+        grid-row: 2 / 4;
+      }
+
+      .el--6 {
+        justify-self: start;
+        align-self: end;
+      }
     </style>
   </head>
 
