--- a/css_layout_task5.html
+++ b/css_layout_task5.html
@@ -30,6 +30,9 @@
         margin: 0;
         padding: 0;
         list-style: none;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
       }
 
       .tags > * {
@@ -39,6 +42,12 @@
         border-radius: 0.2em;
         font-size: 80%;
         margin: 5px;
+      }
+
+      .container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 10px;
       }
     </style>
   </head>
